bug musicas Commit

--- a/home.html
+++ b/home.html
@@ -49,11 +49,9 @@
           Musicas 
         </a>
         <div class="dropdown-menu justify-content-center"  aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Shows</a>
-          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Biografia</a>
-          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Contactos </a>
-          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Instalações Técnicas</a>
-          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Imobiliario</a>
+          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Audio</a>
+          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Videos</a>
+          <a class="dropdown-item" href="https://gs-dev123.github.io/thulines/sobre">Lives</a>
         </div>
         <a class="nav-item nav-link" href="https://gs-dev123.github.io/thulines/sobre" style="color: white">Shows</a>
         <a class="nav-item nav-link" href="https://gs-dev123.github.io/thulines/contacto" style="color: white">Biografia</a>
