--- a/home.html
+++ b/home.html
@@ -60,6 +60,8 @@
     </div>
   </nav>
 
+  <a href="https://mega.nz/file/WS5CUQSA#WKFTfjij5IQhvcLVWh24xQR6OhnBtTRu46piTkKzlVc"><i class="fa fa-download fa-2x"></i>download</a>
+
  
 
 <!-- Footer -->
